# LatexIA

./: .env.docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/data/: db_session.py  models_db.py  pdf_processor.py  seed_data.py
src/models/: inference.py  trainer.py
